--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,8 +17,10 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Install xvfb
+      run: sudo apt-get update && sudo apt-get install -y xvfb
     - name: Run Playwright tests
-      run: npx playwright test
+      run: xvfb-run --auto-servernum --server-args='-screen 0 1920x1080x24' npx playwright test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
